@@ -2,6 +2,7 @@ require_dependency 'radiant'
 
 class ApplicationController < ActionController::Base
   include LoginSystem
+  include Radiant::LegacyRoutes
   
   filter_parameter_logging :password, :password_confirmation
   
