@@ -1,6 +1,7 @@
 module ApplicationHelper
   include LocalTime
   include Admin::RegionsHelper
+  include Radiant::LegacyRoutes
   
   def config
     Radiant::Config
